--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,9 @@ sudo: false
 notifications:
   email: false
 script:
-  - bundle exec rake
+  - printenv | grep "TRAVIS"
 rvm:
-  - 1.9.3
-  - 2.0.0
   - 2.1
-  - jruby
-  - rbx-3
-  - rbx-2
 matrix:
   allow_failures:
     - rvm: rbx-2
